[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raider"
dynamic = ["version"]
description = "A bug bounty recon helper that ranks and prioritizes domains so you can focus on the best targets first."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "pajarori" }]

dependencies = ["tranco", "rich", "httpx", "python-whois", "tldextract", "psycopg"]

[project.scripts]
raider = "raider.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "raider.__version__" }
